tests/paczka1/fuzzy1/10607774.err
Error in line 19: eiwggYA9V S241 0,6
Error in line 22: S93 S121 8,8
Error in line 25: eiwggYA9V S93 80,9
Error in line 29: rE82Q1Xbb S93 19,2
Error in line 35: vKgpJkAu S157 -6,8
Error in line 31: eiwggYA9V S157 60,2
Error in line 39: jWSY1e8 S241 48,85
Error in line 24: vKgpJkAu S157 86,2
